--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "three-js-csg": "^72.0.0"
   }
 }
